--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                 <button type="button" class="btn btn-danger btn-lg px-4 me-md-2"><a
-                    class="about-link" href="CV.pdf" target="_blank">See CV</a></button>
+                    class="about-link" href="CV2.pdf" target="_blank">See CV</a></button>
                 <!-- <button type="button" class="btn btn-outline-secondary btn-lg px-4">See</button> -->
             </div>
         </div>
