Changes some content

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                 <p>Wanna to know more about Me <button type="button" class="btn btn-danger btn-lg px-4 me-md-2"><a
-                            class="about-link" href="CV.pdf" target="_blank">See CV</a></button></p>
+                            class="about-link" href="CV2.pdf" target="_blank">See CV</a></button></p>
             </div>
         </div>
     </div>
